--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,3 +22,6 @@ dependencies = [
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[tool.setuptools.package-data]
+"scape.scape_t" = ["data/*.json"]
