Update pyproject.toml to include more dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,9 @@ dependencies = [
   "datasets<4.0.0", 
   "huggingface_hub<1.14.0",
   "requests",
+  "numpy",
+  "nltk",
+  "pyarrow",
   "torch",
   "textstat",
   "wordfreq",
