--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,3 +28,6 @@ dependencies = [
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+[tool.setuptools.package-data]
+"scape.datasets" = ["*.txt", "*.jsonl", "*.csv"]
